--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "pages":[
+    "pages/home/home",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/article/article",
+    "pages/product/product",
+    "pages/demo/demo",
+    "pages/demo1/demo1"
   ],
   "window":{
     "backgroundTextStyle":"light",
@@ -17,16 +21,22 @@
     "backgroundColor": "#fafafa",
     "list": [
       {
-        "pagePath": "pages/index/index",
-        "iconPath": "images/coming.png",
-        "selectedIconPath": "images/coming-active.png",
-        "text": "发现音乐"
+        "pagePath": "pages/home/home",
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home-active.png",
+        "text": "首页"
       },
       {
-        "pagePath": "pages/logs/logs",
-        "iconPath": "images/ing.png",
-        "selectedIconPath": "images/ing-active.png",
-        "text": "私人Fm"
+        "pagePath": "pages/product/product",
+        "iconPath": "images/image.png",
+        "selectedIconPath": "images/image-active.png",
+        "text": "作品"
+      },
+      {
+        "pagePath": "pages/article/article",
+        "iconPath": "images/article.png",
+        "selectedIconPath": "images/article-active.png",
+        "text": "文章"
       }
     ]
   },
