城市等列表待完善，文章细则页面待完善

--- a/app.json
+++ b/app.json
@@ -1,10 +1,12 @@
 {
   "pages":[
     "pages/home/home",
+    "pages/city/cities",
+    "pages/photographer/details/photographer",
+    "pages/city/details/city",
     "pages/index/index",
     "pages/article/article",
     "pages/product/product",
-    "pages/photographer/photographer",
     "pages/conference/conference"
   ],
   "window":{
